--- a/client-src/src/app/components/login/login.component.html
+++ b/client-src/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
 <form class="form-signin">
   <div class="text-center mb-4">
     <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-    <h1 class="h3 mb-3 font-weight-normal">Floating labels</h1>
-    <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element.</p>
+    <h1 class="h3 mb-3 font-weight-normal">Geo-Marketing</h1>
+    <p>An easy interface that helps you to  market for your brand more efficiently</p>
   </div>
 
   <div class="form-label-group">
