--- a/client-src/src/app/components/login/login.component.html
+++ b/client-src/src/app/components/login/login.component.html
@@ -20,5 +20,5 @@
       <input type="checkbox" value="remember-me"> Remember me
     </label>
   </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <button routerLink = '/main' class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
