--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -25,12 +25,20 @@
             </li>
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
-                non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
-                helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
-                vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't
-                heard of them accusamus labore sustainable VHS.
+                Age
+                Gender
+                <div class="btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-secondary btn-outline-primary active">
+                      <input type="checkbox" checked autocomplete="off">
+                      <i class="fa fa-male" aria-hidden="true"></i>
+                    </label>
+                    <label class="btn btn-secondary btn-outline-primary active">
+                        <input type="checkbox" checked autocomplete="off">
+                        <i class="fa fa-female" aria-hidden="true"></i>
+                      </label>
+                  </div>
+                Education Level
+                Income Level
               </div>
             </div>
           </div>
