Branchs&Add editted

--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -7,74 +7,60 @@
             <li class="nav-item">
               <a class="nav-link active" href="#">
                 <span data-feather="home"></span>
-                Dashboard
+                Adidas
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <span data-feather="file"></span>
-                Orders
+                Competitor Branches
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="shopping-cart"></span>
-                Products
-              </a>
-            </li>
+            
+              <div class="accordion" id="accordionExample">
+                  <li class="nav-item">
+                      <a class="nav-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <span data-feather="target"></span>
+                          Weak Point Analysis
+                        </a>
+                      </li>
+                  
+                  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      <label>
+                        <input type="checkbox"  data-feather="star">Rating
+                      </label>
+                      <label>
+                        <input type="checkbox"  data-feather="layers">Overlap with Branches
+                      </label>
+                      <label>
+                        <input type="checkbox"  data-feather="layers">Overlap with Branches
+                      </label>
+                      <label>
+                        <input type="checkbox"  data-feather="target">Target Segment
+                      </label>
+                      <label>
+                        <input type="checkbox"  data-feather="shopping-bag">Complemntray Product
+                      </label>
+                        
+
+          
+                    
+                    </div>
+                  </div>
+                </div>
             <li class="nav-item">
               <a class="nav-link" href="#">
                 <span data-feather="users"></span>
-                Customers
+                Dashboard
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="bar-chart-2"></span>
-                Reports
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="layers"></span>
-                Integrations
-              </a>
-            </li>
+            
+          
           </ul>
   
-          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-            <span>Saved reports</span>
-            <a class="d-flex align-items-center text-muted" href="#">
-              <span data-feather="plus-circle"></span>
-            </a>
-          </h6>
-          <ul class="nav flex-column mb-2">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Current month
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Last quarter
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Social engagement
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Year-end sale
-              </a>
-            </li>
-          </ul>
+         
         </div>
       </nav>
   
