--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -6,104 +6,71 @@
         <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <span data-feather="users"></span>
+              <i class="fa fa-users" aria-hidden="true"></i>
               Current Customers
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <span data-feather="user-plus"></span>
+              <i class="fa fa-user-plus" aria-hidden="true"></i>
               Potential Customers
             </a>
           </li>
           <div id="accordion">
             <li class="nav-item">
-              <a class="nav-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                <span data-feather="target"></span>
+              <a class="nav-link" data-toggle="collapse" data-target="#target" aria-expanded="true" aria-controls="collapseOne">
+                <i class="fa fa-bullseye" aria-hidden="true"></i>
                 Target Segment
               </a>
             </li>
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="target" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                Age
-                Gender
-                <div class="btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-secondary btn-outline-primary active">
-                      <input type="checkbox" checked autocomplete="off">
-                      <i class="fa fa-male" aria-hidden="true"></i>
-                    </label>
-                    <label class="btn btn-secondary btn-outline-primary active">
+                <form>
+                  <div class="form-group">
+                    <label for="age">Age</label>
+                    <input type="text" class="form-control" id="age" placeholder="Example input">
+                  </div>
+                  <div class="form-group">
+                    <label for="gender">Gender</label>
+                    <div id="gender" class="btn-group-toggle" data-toggle="buttons">
+                      <label class="btn btn-secondary btn-outline-primary active">
+                        <input type="checkbox" checked autocomplete="off">
+                        <i class="fa fa-male" aria-hidden="true"></i>
+                      </label>
+                      <label class="btn btn-secondary btn-outline-primary active">
                         <input type="checkbox" checked autocomplete="off">
                         <i class="fa fa-female" aria-hidden="true"></i>
                       </label>
+                    </div>
                   </div>
+                </form>
                 Education Level
+                <div></div>
                 Income Level
+                <div></div>
+              </div>
+            </div>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="collapse" data-target="#loyal" aria-expanded="true" aria-controls="collapseOne">
+                <i class="fa fa-heart" aria-hidden="true"></i>
+                Loyal Customers
+              </a>
+            </li>
+            <div id="loyal" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                <div class="btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-secondary btn-outline-primary active">
+                    <input type="checkbox" checked autocomplete="off">
+                  </label>
+                </div>
               </div>
             </div>
           </div>
           <li class="nav-item">
             <a class="nav-link active" href="#">
-              <span data-feather="home"></span>
+              <i class="fa fa-bar-chart" aria-hidden="true"></i>
               Dashboard
               <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file"></span>
-              Orders
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="shopping-cart"></span>
-              Products
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="bar-chart-2"></span>
-              Reports
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="layers"></span>
-              Integrations
-            </a>
-          </li>
-        </ul>
-
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Saved reports</span>
-          <a class="d-flex align-items-center text-muted" href="#">
-            <span data-feather="plus-circle"></span>
-          </a>
-        </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Current month
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Last quarter
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Year-end sale
             </a>
           </li>
         </ul>
