Branch&Ads updated

--- a/client-src/src/app/components/login/login.component.html
+++ b/client-src/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <form class="form-signin">
   <div class="text-center mb-4">
     <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
@@ -22,3 +23,4 @@
   </div>
   <button routerLink = '/main' class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
+</div>
