--- a/client-src/src/app/components/main/advertisment/advertisment.component.html
+++ b/client-src/src/app/components/main/advertisment/advertisment.component.html
@@ -5,15 +5,14 @@
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="#">
-                <span data-feather="home"></span>
+              <a class="nav-link" href="#">
+                  <i class="fa fa-adn" aria-hidden="true"></i>
                 Advertisment
-                <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">
-                    <span data-feather="map-pin"></span>
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
                     Pin Point
                   </a>
                
@@ -21,7 +20,7 @@
            
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="shopping-cart"></span>
+                  <i class="fa fa-bar-chart" aria-hidden="true"></i>
                 Dashboard
               </a>
             </li>
