--- a/client-src/src/app/components/login/login.component.css
+++ b/client-src/src/app/components/login/login.component.css
@@ -1,3 +1,10 @@
+.bg{
+  background-image: url("C:\Users\samar\Documents\GitHub\Grad_Project\client-src\src\photo-water-1.jpg");
+
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size:cover;
+}
 .form-signin {
   width: 100%;
   max-width: 420px;
