Customer, Assets Updated.

--- a/client-src/src/app/components/main/customer/customer.component.html
+++ b/client-src/src/app/components/main/customer/customer.component.html
@@ -28,7 +28,7 @@
                 <form>
                   <div class="form-group">
                     <label for="age">Age</label>
-                    <input type="text" class="form-control" id="age" placeholder="Example input">
+                    <input type="text" class="form-control" id="age" placeholder="19:30">
                   </div>
                   <div class="form-group">
                     <label for="gender">Gender</label>
@@ -43,11 +43,23 @@
                       </label>
                     </div>
                   </div>
+                  <div class="form-group">
+                    <label for="educationLevel">Education Level</label>
+                    <select id="educationLevel" class="custom-select" multiple>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="incomeLevel">Income Level</label>
+                    <select id="incomeLevel" class="custom-select" multiple>
+                      <option value="1">A</option>
+                      <option value="2">B</option>
+                      <option value="3">C</option>
+                    </select>
+                  </div>
                 </form>
-                Education Level
-                <div></div>
-                Income Level
-                <div></div>
               </div>
             </div>
             <li class="nav-item">
@@ -58,11 +70,16 @@
             </li>
             <div id="loyal" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                <div class="btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-secondary btn-outline-primary active">
-                    <input type="checkbox" checked autocomplete="off">
-                  </label>
-                </div>
+                <form>
+                  <div class="form-group">
+                    <label for="#duration">Duration</label>
+                    <input id="duration" type="text" class="form-control" placeholder="Specify minimum number of years">
+                  </div>
+                  <div class="form-group">
+                      <label for="#orders">Orders</label>
+                      <input id="orders" type="text" class="form-control" placeholder="Specify minimum number of years">
+                    </div>
+                </form>
               </div>
             </div>
           </div>
@@ -76,7 +93,6 @@
         </ul>
       </div>
     </nav>
-
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
     </main>
   </div>
