Login background photo added&branchupdated

--- a/client-src/src/app/components/login/login.component.css
+++ b/client-src/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 .bg{
-  background-image: url("C:\Users\samar\Documents\GitHub\Grad_Project\client-src\src\photo-water-1.jpg");
+  background-image: url("../../../assets/photo-water-1.jpg");
 
       background-position: center;
       background-repeat: no-repeat;
