--- a/client-src/src/app/components/main/branches/branches.component.html
+++ b/client-src/src/app/components/main/branches/branches.component.html
@@ -18,7 +18,7 @@
                 </li>
             <li class="nav-item">
               <a class="nav-link" href="#">
-                <span data-feather="file"></span>
+                  <i class="fa fa-user-secret" aria-hidden="true"></i>
                 Competitor Branches
               </a>
             </li>
@@ -26,7 +26,7 @@
               <div class="accordion" id="accordionExample">
                   <li class="nav-item">
                       <a class="nav-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          <span data-feather="target"></span>
+                          <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                           Weak Point Analysis
                         </a>
                       </li>
@@ -36,39 +36,39 @@
                         <div class="btn-group-toggle" data-toggle="buttons">
                         
                           
-                          <label class="btn btn-secondary btn-outline-dark active">
+                          <label class="btn btn-secondary btn-outline-primary active">
                               <input type="checkbox" checked autocomplete="off">
                               <i class="fa fa-object-ungroup" aria-hidden="true"></i>
-                              Overlap with branches
+                             
                             </label>
                             <br/>
                             
-                            <label class="btn btn-secondary btn-outline-dark active">
+                            <label class="btn btn-secondary btn-outline-primary active">
                                 <input type="checkbox" checked autocomplete="off">
                                 <i class="fa fa-object-ungroup" aria-hidden="true"></i>
-                                Overlap with competitor
+                                
                               </label>
                               <br/>
                               
                              
                                 
-                                <label class="btn btn-secondary btn-outline-dark active">
+                                <label class="btn btn-secondary btn-outline-primary active">
                                     <input type="checkbox" checked autocomplete="off">
                                     <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                     Complemntrary Product
+                                    
                                   </label>
                                   <br/>
-                                  <label class="btn btn-secondary btn-outline-dark active">
+                                  <label class="btn btn-secondary btn-outline-primary active">
                                       
                                       <input type="checkbox" checked autocomplete="off">
                                        <i class="fa fa-users" aria-hidden="true"></i>
-                                       Target Segment
+                                       
                                       </label>
                                       <br/>
-                                  <label class="btn btn-secondary btn-outline-dark active">
+                                  <label class="btn btn-secondary btn-outline-primary active">
                                       <input type="checkbox" checked autocomplete="off">
                                       <i class="fa fa-star-o" aria-hidden="true"></i>
-                                      Rating
+                                     
                                     </label>
                                   </div>
                         
