Main Components Updated.

--- a/client-src/src/app/components/login/login.component.html
+++ b/client-src/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="bg">
-<form class="form-signin">
+<form ngForm name="f" #f="ngForm" class="form-signin">
   <div class="text-center mb-4">
     <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Geo-Marketing</h1>
@@ -21,6 +21,6 @@
       <input type="checkbox" value="remember-me"> Remember me
     </label>
   </div>
-  <button routerLink = '/main' class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <button (click)='onSubmit(f)' routerLink = '/main' class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
 </form>
 </div>
