--- a/client-src/src/app/components/main/expansion/expansion.component.html
+++ b/client-src/src/app/components/main/expansion/expansion.component.html
@@ -1,84 +1,58 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
-    <div class="row">
-      <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-        <div class="sidebar-sticky">
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">
-                <span data-feather="home"></span>
-                Dashboard
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file"></span>
-                Orders
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="shopping-cart"></span>
-                Products
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="users"></span>
-                Customers
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="bar-chart-2"></span>
-                Reports
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="layers"></span>
-                Integrations
-              </a>
-            </li>
-          </ul>
-  
-          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-            <span>Saved reports</span>
-            <a class="d-flex align-items-center text-muted" href="#">
-              <span data-feather="plus-circle"></span>
+  <div class="row">
+    <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+      <div class="sidebar-sticky">
+        <ul class="nav flex-column">
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+              Best Location for:-
             </a>
-          </h6>
-          <ul class="nav flex-column mb-2">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Current month
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Last quarter
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Social engagement
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Year-end sale
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-  
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-      </main>
-    </div>
+            <div *ngFor='let expansionType of expansionTypes' class="radio">
+              <label for="expansionType">
+                <input [value]="expansionType.id" type="radio" name="expansionType"> {{expansionType.name}}
+              </label>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="collapse" data-target="#selectMethod" aria-expanded="true" aria-controls="collapseOne">
+              <i class="fa fa-bullseye" aria-hidden="true"></i>
+              Select Location
+            </a>
+          </li>
+          <form>
+            <div class="form-group">
+              <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary btn-outline-primary active">
+                  <input type="radio" autocomplete="off">
+                  <i class="fa fa-square-o" aria-hidden="true"></i>
+                </label>
+                <label class="btn btn-secondary btn-outline-primary active">
+                  <input type="radio" autocomplete="off">
+                  <i class="fa fa-bookmark-o fa-rotate-180" aria-hidden="true"></i>
+                </label>
+                <label class="btn btn-secondary btn-outline-primary active">
+                  <input type="radio" autocomplete="off">
+                  <i class="fa fa-map-marker" aria-hidden="true"></i>
+                </label>
+              </div>
+            </div>
+          </form>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="#">
+              <i class="fa fa-bar-chart" aria-hidden="true"></i>
+              Dashboard
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+    </main>
   </div>
+</div>
