--- a/client-src/src/app/components/main/advertisment/advertisment.component.html
+++ b/client-src/src/app/components/main/advertisment/advertisment.component.html
@@ -6,7 +6,7 @@
           <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link" href="#">
-                  <i class="fa fa-adn" aria-hidden="true"></i>
+                  <i class="fa fa-bullhorn" aria-hidden="true"></i>
                 Advertisment
               </a>
             </li>
