--- a/client-src/src/app/components/main/navbar/navbar.component.html
+++ b/client-src/src/app/components/main/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
   <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main">Geomarketing</a>
   <ul class="navbar-nav px-3"></ul>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/customer">Customers</a>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/expansion">Expansion</a>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/branches">Branches</a>
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/ads">Advertisments</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/customer"><i class="fa fa-users" aria-hidden="true"></i> Customers</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/expansion"><i class="fa fa-expand" aria-hidden="true"></i> Expansion</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/branches"><i class="fa fa-building-o" aria-hidden="true"></i> Branches</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="main/ads"><i class="fa fa-bullhorn" aria-hidden="true"></i> Advertisments</a>
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
+      <a class="nav-link" href="#"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign out</a>
     </li>
   </ul>
 </nav>
