--- a/client-src/src/app/components/main/branches/remove/remove.component.css
+++ b/client-src/src/app/components/main/branches/remove/remove.component.css
@@ -1,4 +1,4 @@
-input[type=text]{
+select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -7,7 +7,6 @@ input[type=text]{
     border-radius: 4px;
     box-sizing: border-box;
 }
-
 input[type=submit] {
     width: 100%;
     background-color: #4CAF50;
