Map Added to Main Components, Map Styles Updated

--- a/client-src/src/app/components/main/main.component.html
+++ b/client-src/src/app/components/main/main.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
-<app-map></app-map>
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+    <app-map></app-map>
+</main>
