--- a/client-src/src/app/components/main/advertisment/advertisment.component.html
+++ b/client-src/src/app/components/main/advertisment/advertisment.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-main></app-main>
 <div class="container-fluid">
     <div class="row">
       <nav class="col-md-2 d-none d-md-block bg-light sidebar">
