--- a/client-src/src/app/components/main/customer/target-segment/target-segment.component.html
+++ b/client-src/src/app/components/main/customer/target-segment/target-segment.component.html
@@ -14,11 +14,11 @@
       <div class="form-group">
         <label for="gender">Gender</label>
         <div id="gender" class="btn-group-toggle" data-toggle="buttons">
-          <label class="circle btn btn-secondary btn-outline-primary active">
+          <label class="circle btn btn-secondary btn-outline-primary">
             <input type="checkbox" checked autocomplete="off">
             <i class="fa fa-male" aria-hidden="true"></i>
           </label>
-          <label class="circle btn btn-secondary btn-outline-primary active">
+          <label class="circle btn btn-secondary btn-outline-primary">
             <input type="checkbox" checked autocomplete="off">
             <i class="fa fa-female" aria-hidden="true"></i>
           </label>
